# intelligent-document-classifier

./: .gitignore  Readme.md  app.py  pyproject.toml  requirement.txt
Data/: README.md
Data/raw/invoice/: invoice_1.txt  invoice_2.txt  invoice_3.txt
Data/raw/report/: report_1.txt  report_2.txt  report_3.txt
Data/raw/resume/: resume_1.txt  resume_2.txt  resume_3.txt
artifacts/: model.joblib  vectorizer.joblib
src/: model_persistence.py  test_loader.py  train_model.py  vectorizer.py
src/document_classifier/: confidence.py  data_loader.py  evaluate_model.py  file_router.py  model_persistence.py  text_cleaning.py  text_extractor.py  train_svm.py
src/testing_files/: save_trained_model.py  test_cleaning.py  test_loader.py  test_model_comparison.py  test_training.py  test_vectorizer.py
