[project]
name = "document-classifier"
version = "0.1.0"
description = "Intelligent Document Classifier"
requires-python = ">=3.10"

dependencies = [
    "streamlit>=1.28.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "joblib>=1.3.0",

    "pdfplumber>=0.11.0", 
    "python-docx>=1.1.0"

]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
